# sr_hand_detector

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/sr_hand_detector/: sr_hand_autodetect.h  sr_hand_detector.h
src/sr_hand_detector/: sr_hand_autodetect.cpp  sr_hand_autodetect_node.cpp  sr_hand_detector.cpp  sr_hand_detector_node.cpp
test/: test_sr_hand_autodetect.cpp
test/config/: copyright_exclusions.cfg
test/config/1130/: general_info.yaml
test/config/2346/: general_info.yaml
test/config/634/: general_info.yaml
